Inseri tela de cadastro de paciente e funcionalidades editar excluir e vizualizar

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,4 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Prontuario do Paciente Online/wwwroot/lib/bootstrap/dist/css/bootstrap.css
