Refatorando e implementando tela de administrativo com a funcao de vizualizar pacientes cadastrados

--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,4 @@ MigrationBackup/
 FodyWeavers.xsd
 /Prontuario do Paciente Online/wwwroot/lib/bootstrap/dist/css/bootstrap.css
 /Prontuario do Paciente Online/Scripts/CadastroPaciente.js
+/Prontuario do Paciente Online/Views/Shared/_LayoutAdmin.cshtml
