--- a/Prontuario do Paciente Online/Prontuario do Paciente Online.csproj
+++ b/Prontuario do Paciente Online/Prontuario do Paciente Online.csproj
@@ -312,4 +312,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
