Ajuste em tipos de acesso do usuario

--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,5 @@ FodyWeavers.xsd
 /Prontuario do Paciente Online/Scripts/CadastroPaciente.js
 /Prontuario do Paciente Online/Views/Shared/_LayoutAdmin.cshtml
 /Prontuario do Paciente Online/Views/Pacientes/Index.cshtml
+/Prontuario do Paciente Online/Views/Home/Index.cshtml
+/Prontuario do Paciente Online/Views/Pacientes/Create.cshtml
