Implementando adicionar prontuario do paciente

--- a/Prontuario do Paciente Online/Prontuario do Paciente Online.csproj
+++ b/Prontuario do Paciente Online/Prontuario do Paciente Online.csproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="Views\Prontuario\_AdicionarProntuario.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="wwwroot\assets\css\argon-dashboard.css" />
     <None Include="wwwroot\assets\css\argon-dashboard.css.map" />
     <None Include="wwwroot\assets\css\argon-dashboard.min.css" />
