Inseri logica de prontuarios existentes para o paciente

--- a/Prontuario do Paciente Online/Prontuario do Paciente Online.csproj
+++ b/Prontuario do Paciente Online/Prontuario do Paciente Online.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <Content Remove="Views\Prontuario\_AdicionarProntuario.cshtml" />
+    <Content Remove="wwwroot\css\styles.css" />
   </ItemGroup>
 
   <ItemGroup>
